small alignment issues

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -631,7 +631,7 @@ section .container.singlepoint{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 64px 24px;
+	padding: 24px 24px 64px 24px;
 	text-align: center;
 	color: white;
 	max-width: 640px;
